hphp/hack/test/typecheck/lambda/sort_by.php.like_types.exp
File "sort_by.php", line 20, characters 21-54:
Invalid argument (Typing[4110])
File "sort_by.php", line 12, characters 3-20:
Expected ~(function([unresolved]): [unresolved]) because it is an unenforceable type
File "sort_by.php", line 20, characters 21-54:
But got (function(TimePeriod $u): [unresolved])
File "sort_by.php", line 20, characters 70-76:
Typing error (Typing[4323])
File "sort_by.php", line 10, characters 22-23:
Some type constraint(s) are violated here
File "sort_by.php", line 10, characters 22-23:
Ts is a constrained type parameter
File "sort_by.php", line 20, characters 70-71:
Expected num because this is used in an arithmetic operation
File "sort_by.php", line 10, characters 22-23:
But got dynamic
File "sort_by.php", line 20, characters 70-76:
Typing error (Typing[4323])
File "sort_by.php", line 10, characters 22-23:
Some type constraint(s) are violated here
File "sort_by.php", line 10, characters 22-23:
Ts is a constrained type parameter
File "sort_by.php", line 20, characters 75-76:
Expected num because this is used in an arithmetic operation
File "sort_by.php", line 10, characters 22-23:
But got dynamic
